# fred-ai-chatbot

./: CLAUDE.md  DESIGN_ARCHITECTURE.md  DESIGN_CUSTOMIZATION_GUIDE.md  QUICK_DESIGN_REFERENCE.md  README.md
.github/workflows/: Check-pending-requests.yml
agentic-backend/config/: configuration.yaml  configuration_prod.yaml
agentic_backend/: Makefile  pyproject.toml
agentic_backend/.baseline/: basedpyright-baseline.json
agentic_backend/app/: application_context.py  main.py
agentic_backend/app/academy/: ACADEMY.md
agentic_backend/app/academy/00-echo/: echo.py
agentic_backend/app/academy/01-llm-responder/: llm-responder.py
agentic_backend/app/academy/02-dual-model-responder/: dual-model-responder.py
agentic_backend/app/academy/03_asset_responder/: asset_responder.py  welcome.txt
agentic_backend/app/academy/04_slide_maker/: simple_template.pptx  slide_maker.py
agentic_backend/app/academy/05_gps_agent/: gps_agent.py
agentic_backend/app/agents/content_generator/: content_generator_expert.py  modibo.py
agentic_backend/app/agents/documents/: documents_expert.py
agentic_backend/app/agents/generalist/: generalist_expert.py
agentic_backend/app/agents/jira/: jira_expert.py
agentic_backend/app/agents/leader/: leader.py
agentic_backend/app/agents/rags/: advanced_rag_expert.py  rag_expert.py
agentic_backend/app/agents/sentinel/: sentinel_expert.py
agentic_backend/app/agents/tabular/: tabular_expert.py
agentic_backend/app/chatbot/: chatbot_controller.py
agentic_backend/app/common/: kf_agent_asset_client.py  kf_base_client.py  kf_resource_client.py  kf_vector_search_client.py  mcp_runtime.py  mcp_utils.py  rags_utils.py  structures.py
agentic_backend/app/config/: security_controller.py
agentic_backend/app/core/: runtime_source.py
agentic_backend/app/core/agents/: agent_controller.py  agent_flow.py  agent_loader.py  agent_manager.py  agent_service.py  agent_spec.py  agent_supervisor.py  agentic_flow.py  context_aware_tool.py  flow.py  mcp_agent.py  runtime_context.py
agentic_backend/app/core/auth/: __init__.py  user_context_helper.py
agentic_backend/app/core/chatbot/: chat_schema.py  chatbot_controller.py  message_part.py  session_orchestrator.py  stream_transcoder.py
agentic_backend/app/core/feedback/: controller.py  structures.py
agentic_backend/app/core/model/: model_factory.py
agentic_backend/app/core/monitoring/: duckdb_history_store.py  monitoring_controller.py
agentic_backend/app/core/session/stores/: duckdb_session_store.py  opensearch_session_store.py
agentic_backend/app/features/frugal/: ai_controller.py
agentic_backend/app/features/frugal/carbon/: carbon_controller.py
agentic_backend/app/features/frugal/energy/: energy_controller.py
agentic_backend/app/features/frugal/finops/: finops_controller.py
agentic_backend/app/features/k8/: kube_controller.py
agentic_backend/app/services/frontend/: feedback_router.py  frontend_controller.py
agentic_backend/app/tests/: conftest.py  test_chatbot_controller.py
agentic_backend/config/: .env.template  configuration.yaml  configuration_academy.yaml  configuration_prod.yaml
agentic_backend/dockerfiles/: Dockerfile-prod
agentic_backend/docs/: AGENTS.md  PROTOCOL.md  TABULAR_AGENT.md
deploy/charts/fred/: values.yaml
developer_tools/academy/: 04-generate-ppts-template.py
docs/: AGENT_LIFECYCLE.md  KEYCLOAK.md  OAUTH2_TOKEN_EXCHANGE_SUMMARY.md
fred-core/: docker-compose.integration.yml
fred-core/fred_core/: __init__.py
fred-core/fred_core/common/: bootstrap_resources.py  structures.py  timestamp.py
fred-core/fred_core/kpi/: __init__.py  kpi_writer.py  kpi_writer_structures.py
fred-core/fred_core/resources/: bootstrap_resources.py  frontmatter.py  header_models.py  tags.py
fred-core/fred_core/security/: authorization.py  keycloak.py  models.py  outbound.py  rbac.py  security.py  security_provider.py  structure.py  system_actor.py  test_security_provider.py
frontend/: index.html  package-lock.json  package.json
frontend/dockerfiles/: Dockerfile-prod
frontend/public/images/: fred-old.svg.bak
frontend/src/: index.tsx
frontend/src/app/: App.tsx  SideBar.tsx
frontend/src/common/: DocumentViewer.tsx  LibraryCreateDrawer.tsx  PdfDocumentViewer.tsx  PdfStreamingDocumentViewer.tsx  config.tsx  dynamicBaseQuery.tsx  router.tsx  store.tsx  useDocumentViewer.tsx  usePdfDocumentViewer.tsx  useTagCommands.ts
frontend/src/pages/: Chat.tsx  (+6 more)
knowledge-flow-backend/: README.md  pyproject.toml
knowledge-flow-backend/config/: README.md
knowledge_flow_backend/: Makefile  pyproject.toml
knowledge_flow_backend/.baseline/: basedpyright-baseline.json
knowledge_flow_backend/app/: application_bootstrap.py  application_context.py  main.py
knowledge_flow_backend/config/: .env.template  configuration.yaml  configuration_prod.yaml  configuration_worker.yaml
knowledge_flow_backend/dockerfiles/: Dockerfile-prod
scripts/: check_route_security.py
scripts/makefiles/: python-run.mk  python-security.mk  python-test.mk  python-vars.mk
(+121 files in other folders)
