[project]
name = "knowledge-flow-backend"
readme = "README.md"
version = "0.1"
description = "Knowledge Flow Backend"
authors = [{ name = "Fred", email = "noreply@example.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi==0.116.1",
  "langchain>=1.0.0",
  "langchain-community>=0.4.0",
  "uvicorn[standard]==0.34.0",
  "openai>=1.104.2,<2.0.0",
  "coloredlogs==15.0.1",
  "PyYAML==6.0.1",
  "pydantic>=2.5.2,<3.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "ipython==8.31.0",
  "python-multipart==0.0.20",
  "opensearch-py==2.8.0",
  "python-docx==1.1.2",
  "minio==7.2.15",
  "pypandoc-binary==1.15",
  "pypandoc==1.15",
  "pandas==2.2.3",
  "pypdf==5.4.0",
  "python-pptx==1.0.2",
  "google-cloud-storage==3.1.0",
  "rich==14.0.0",
  "shortuuid==1.0.13",
  "openpyxl==3.1.5",
  "docling==2.34.0",
  "hf-xet==1.1.1",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "fastapi-mcp==0.4.0",
  "duckdb>=1.3.2",
  "weaviate-client<4.0.0",
  "fred-core",
  "temporalio>=1.14.1",
  "dateparser>=1.2.2",
  "pymysql>=1.1.1",
  "duckdb-engine>=0.17.0",
  "psycopg2-binary>=2.9.10",
  "sqlparse>=0.5.3",
  "uv",
  "chromadb>=0.5",
  "python-keycloak>=5.8.1",
  "joblib>=1.5.2",
  "matplotlib>=3.10.7",
  "scikit-learn>=1.7.2",
  "langchain-text-splitters>=1.0.0",
  "docx>=0.2.4",
]

[project.optional-dependencies]
dev = [
  "pytest-cov==6.1.1",
  "reportlab==4.3.1",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "black==23.1.0",
  "isort==5.10.1",
  "tox==4.27.0",
  "pre-commit==4.2.0",
  "bandit==1.8.5",
  "ruff==0.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
packages = [{ include = "knowledge_flow_backend" }]

[tool.ruff]
line-length = 200

[tool.setuptools.packages.find]
include = ["knowledge_flow_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
cache_dir = "/tmp/.pytest"

markers = [
  "content_storage_type(type): mark test to select a content store backend",
  "metadata_storage_type(type): mark test to select a metadata store backend",
  "vector_storage_type(type): mark test to select a vector store backend",
]

[tool.uv.sources]
fred-core = { path = "../fred-core", editable = true }
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
  "bandit>=1.8.5",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "ruff>=0.12.0",
]

[tool.uv]
# Using `editable_mode = "compat"` when installing fred-core to make editable install work with Pylance (vscode):
# https://github.com/microsoft/pylance-release/blob/main/TROUBLESHOOTING.md#editable-install-modules-not-found
config-settings = { editable_mode = "compat" }
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
